@@ -1,3 +1,8 @@
+Sat Feb 18 11:44:27 GMT 2012  Lee Noar  <leenoar@sky.com>
+
+	* unistd/symlink.c(symlink): More compact code and better
+	error handling.
+
 Fri Feb 17 20:36:11 GMT 2012  Lee Noar  <leenoar@sky.com>
 
 	* unistd/symlink.c(symlink): Implement writing of symlink
